tests/expectations/compiler/finalize/unknown_mapping_operation_fail.out
Error [ETYC0372003]: Expected type `()` but type `Future<Fn(address,u64)>` was found
    --> compiler-test:7:17
     |
   7 |          return finalize_mint_public(receiver, amount);
     |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown function `Mapping::has_key`
    --> compiler-test:11:30
     |
  11 |          let has_key: bool = Mapping::has_key(account, receiver);
     |                              ^^^^^^^^^^^^^^^^
